# profgent

./: .gitignore  AGENTS.md  ARCHITECTURE.md  README.md  alembic.ini  main.py  pyproject.toml  verify_startup.py
alembic/: env.py
alembic/versions/: 0001_initial_schema.py  5c9a0c0605f2_add_assessment_model_and_update_class_.py  79f509abebdc_add_status_to_student_and_create_class_.py
app/core/: __init__.py  config.py
app/data/: base_repository.py  course_repository.py  database.py  grade_repository.py  student_repository.py
app/models/: __init__.py  assessment.py  base.py  class_.py  class_enrollment.py  class_subject.py  course.py  grade.py  incident.py  lesson.py  student.py
app/services/: __init__.py  assistant_service.py  data_service.py  legacy_ai_importer.py  report_service.py
app/tools/: __init__.py  analysis_tools.py  database_read_tools.py  database_tools.py  database_write_tools.py  internet_tools.py  pedagogical_tools.py  report_tools.py
app/ui/: __init__.py  main_app.py
app/utils/: __init__.py  async_utils.py  charts.py  format_utils.py  import_utils.py  name_parser.py  student_csv_parser.py
docs/: DEVELOPER_GUIDE.md  MANUAL_DO_DESENVOLVEDOR.md
tests/: conftest.py  test_course_deletion.py  test_domain_validation.py  test_llm_base_conversion.py  test_new_models.py  test_report_service.py  test_report_tools.py  test_reproduction.py  test_startup_bug.py  test_tools_maintenance.py  test_tools_new.py  test_tools_operational.py  test_tools_refinement.py
tests/models/: test_model_cascades.py
tests/services/: __init__.py  test_csv_importer.py  (+8 more)
(+37 files in other folders)
