[tool.pytest.ini_options]
pythonpath = "."

[project]
name = "academic-management-app"
version = "0.1.0"
description = "An academic management application with an AI assistant."
authors = [
    {name = "Jules"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10,<3.15"
dependencies = [
    "customtkinter (>=5.2.2,<6.0.0)",
    "sqlalchemy (>=2.0.44,<3.0.0)",
    "openai (>=2.6.1,<3.0.0)",
    "keyring (>=25.6.0,<26.0.0)",
    "beautifulsoup4 (>=4.14.2,<5.0.0)",
    "requests (>=2.32.5,<3.0.0)",
    "matplotlib (>=3.10.7,<4.0.0)",
    "pytest-mock (>=3.15.1,<4.0.0)",
    "alembic (>=1.17.1,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pyinstaller (>=6.16.0,<7.0.0)",
    "pytest (>=8.4.2,<9.0.0)"
]
